--- a/practise.html
+++ b/practise.html
@@ -3,6 +3,6 @@
         <title></title>
     </head>
     <body>
-        <h1>corona virus</h1>
+        <Strong>i am israfil islam</Strong>
     </body>
 </html>
