--- a/practise.html
+++ b/practise.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>corona virus</h1>
+        <p>now a days corona virus increasung day by day</p>
     </body>
 </html>
