updater brancha again

--- a/practise.html
+++ b/practise.html
@@ -3,6 +3,7 @@
         <title></title>
     </head>
     <body>
-        <Strong>i am israfil islam</Strong>
+        <strong>i am israfil</strong>
+        <p>now a days corona virus increasung day by day</p>
     </body>
 </html>
