i have added a new file and edit

--- a/practise.html
+++ b/practise.html
@@ -7,6 +7,6 @@
         <p>now a days corona virus increasung day by day</p>
         <strong>i am israfil</strong>
         <p>now a days corona virus increasung day by day</p>
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dicta earum magnam facilis, quasi corporis hic, ea quod neque dolores laboriosam tenetur molestias non, saepe provident quae commodi deserunt. Quas.</p>
     </body>
 </html>
